fix: fixed state info overlap

--- a/src/components/Calendar/Calendar.responsive.scss
+++ b/src/components/Calendar/Calendar.responsive.scss
@@ -6,6 +6,12 @@
   }
 }
 
+@media only screen and (max-width: 768px) {
+  .calendar-info-state-hover {
+    right: 0;
+  }
+}
+
 @media only screen and (max-width: 568px) {
   .calendar-info-date {
     .date-wrapper {
